--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/gamestore
 spring.datasource.username=postgres
-#spring.datasource.password=docker
-spring.datasource.password=postgres
+spring.datasource.password=docker
+#spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
