--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/gamestore
 spring.datasource.username=postgres
+#local-guilherme
 spring.datasource.password=docker
+#local-carlos
 #spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
