--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 			<artifactId>xml-path</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy -->
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy</artifactId>
+			<version>3.0.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
