ajuste rota /clients

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/gamestore
 spring.datasource.username=postgres
 #local-guilherme
-#spring.datasource.password=docker
+spring.datasource.password=docker
 #local-carlos
-spring.datasource.password=postgres
+#spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
